# dystopian-sbh

./: BUILD-VARIANTS-FINAL.md  INSTALL.md  LOCALIZED-NATIVE-BUILD.md  PKGBUILD  README.md  RESUMÉ.md
.github/workflows/: auto-release.yml  shell-smoke.yml  telegram-notify.yml
.plan/: development-workflow.md  rules.md
config/: PKGBUILD-linux-cachyos  PKGBUILD-linux-cachyos-hardened  PKGBUILD-linux-cachyos-native  PKGBUILD-linux-cachyos-optimized  config.native-minimal  config.x86-64-v2
config/cachyos-env/: OPTIMIZATION-NOTES.txt  hardened-minimal.env  native-minimal.env  optimized-customized-hardened-nvidia-builtin-slim.env  optimized-customized-hardened-nvidia-builtin.env  optimized-customized-hardened-nvidia-lkm-slim.env  optimized-customized-hardened-nvidia-lkm.env  optimized-customized-hardened.env  optimized-customized-nvidia-builtin-slim.env  optimized-customized-nvidia-builtin.env  optimized-customized-nvidia-lkm-slim.env  optimized-customized-nvidia-lkm.env  optimized-customized.env  polly-optimized.env
doc/: BUILD-GUIDE.md  BUILD-VARIANTS-COMPLETE.md  CACHYOS-OFFICIAL-PKGBUILD.md  HARDWARE-OPTIMIZATION.md  KERNEL-SIZE-OPTIMIZATION.md  NATIVE-MINIMAL-BUILD.md  NVIDIA-DRIVER-MODES.md  NVIDIA-INTEGRATION.md  NVIDIA-PASCAL-DRIVER-LOCK.md  NVIDIA-PASCAL-HELP.md
dystopian-sbh/: config  packed-refs
dystopian-sbh/objects/pack/: pack-a7bcf77b588a8d3200e1ca910bc20332a7e4deb5.idx  (+2 more)
hooks/: 60-dystopian-kernel-toolchain-sonames.hook
python-dev/: INDEX.md  PKGBUILD  PKGBUILD-GUIDE.md  PKGBUILD-MANIFEST.txt  README.md  cachyos-sbh-py.install  pyproject.toml  pyright-report.json  pyrightconfig.json  setup.py  setup.sh
python-dev/cachyos_sbh/: __init__.py  cryptsetup_async.py  nvidia_async.py  tpm_async.py
python-dev/tests/: test_async_modules.py
